# hsr_dictionary

./: .env  .gitignore  Cargo.toml  Dockerfile  justfile  test.sql
crud/: Cargo.toml
crud/src/: error.rs  lib.rs  query.rs  test_data.rs  update_data.rs
crud/test_data/: TextMapCHS.json  TextMapCHT.json  TextMapDE.json  TextMapEN.json  TextMapES.json
crud/tests/: test.rs
migrations/: 20240210082152_dictionary_items.down.sql  20240210082152_dictionary_items.up.sql  20240214062856_item_constraints.down.sql  20240214062856_item_constraints.up.sql
model/: Cargo.toml
model/src/: lib.rs
src/: app.rs  init_tracing.rs  lib.rs  main.rs  search_dictionary.rs
tests/: test.rs  test.sql  test2.sql
