[package]
name = "hsr_dictionary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.1", features = ["full"] }

tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

axum = "0.7"
axum-macros = "0.4"
axum-valid = "0.15"

clap = { version = "4.3", features = ["derive"] }

tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
tracing-unwrap = { workspace = true }

crud = { workspace = true }

validator = { version = "0.16", features = ["derive"] }

sqlx = { workspace = true }

model = { workspace = true }

http-body-util = "0.1"

itertools = { workspace = true }

[workspace]
members = ["crud", "model"]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }

serde = "1.0"
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tracing-unwrap = "0.10"

anyhow = "1.0"

crud = { path = "crud" }
model = { path = "model" }

sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }

thiserror = "1.0"

reqwest = { version = "0.11", features = ["json", "serde_json"] }
lazy_static = "1.4"

strum = { version = "0.26", features = ["derive"] }

futures = "0.3"

dotenvy = "0.15"

itertools = "0.12"

log = "0.4"