[package]
name = "crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing-unwrap = { workspace = true }

sqlx = { workspace = true }
model = { workspace = true }
thiserror = { workspace = true }

reqwest = { workspace = true }

lazy_static = { workspace = true }


tracing = { workspace = true }

strum = { workspace = true }

futures = { workspace = true }

dotenvy = { workspace = true }

itertools = { workspace = true }

indicatif = "0.17"

log = { workspace = true }

tempfile = "3.10"